# jungo-cli

./: .gitignore  LICENSE  README.md  flake.nix  pyproject.toml
bittensor_cli/: cli.py
bittensor_cli/src/: __init__.py
bittensor_cli/src/bittensor/: chain_data.py  subtensor_interface.py  utils.py
bittensor_cli/src/bittensor/extrinsics/: registration.py
bittensor_cli/src/commands/: root.py  subnets.py  wallets.py
bittensor_cli/src/commands/stake/: children_hotkeys.py  stake.py
tests/e2e_tests/: test_root.py  test_staking_sudo.py  test_wallet_interactions.py  utils.py
