[project]
name            = "btcli"
version         = "0.1.0"
readme          = "README.md"
requires-python = ">=3.9"
# url             = "https://github.com/jango-ai/jcli" # TODO
# author          = "jango-ai.com" # TODO
dependencies    = [
    "wheel",
    "async-property==0.2.2",
    "aiohttp~=3.10.2",
    "backoff~=2.2.1",
    "GitPython>=3.0.0",
    "fuzzywuzzy~=0.18.0",
    "netaddr~=1.3.0",
    "numpy>=2.0.1",
    "Jinja2",
    "pycryptodome",
    # Crypto
    "PyYAML~=6.0.1",
    "pytest",
    "python-Levenshtein",
    "rich~=13.7",
    "scalecodec==1.2.11",
    "substrate-interface~=1.7.9",
    "typer~=0.12",
    "websockets>=14.1",
    "bittensor-wallet>=2.1.3",
    "bt-decode==0.4.0",
    # cuda requirements
    "torch",
    # TODO: currently adding it made project break, because it will add bittensor_cli-v8.4.2
    # "cubit @ https://github.com/opentensor/cubit/releases/download/v1.1.2/cubit-1.1.2-cp39-cp39-linux_x86_64.whl",
]

[project.scripts]
"btcli" = "bittensor_cli.cli:main"

[build-system]
requires = ["hatchling", "wheel"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["tests", "bittensor_cli"]
